delete old fmod stuf

--- a/install.txt
+++ b/install.txt
@@ -1,15 +1,18 @@
-# packs to install to compile
-# The program req 300 Mbytes of diskspace.
+# packs to install to compile the code
+# The program req 350 Mbytes of diskspace.
+#
+# first version 02-09-2014
+# last update 01-01-2017
+#
 # open shell
 # write in shell
-# updated 02-09-2014
 
-This packets need to be installed on Ubuntu.
+This packets need to be installed on Ubuntu linux.
 
 g++ make libdevil-dev libsdl1.2-dev glutg3-dev libmysqlclient-dev libsdl-image1.2-dev lirc-modules-source 
 dialog libglc-dev imagemagick liblircclient-dev xmltv libglc-dev libdevil1c2 unzip lirc
 
-Version.
+Program version.
 
 mythtv-controller ver 0.32.x
 
@@ -17,7 +20,8 @@ Howto install.
 
 mkdir mythtv-controller
 cd mythtv-controller   
-tar -zxf fmodapi44441linux.tar.gz
+download into dir and unpack by
+tar -zvxf fmodapi44441linux.tar.gz
 
 Now install by doing.
 
