--- a/install.txt
+++ b/install.txt
@@ -4,6 +4,7 @@
 # write in shell
 # updated 02-09-2014
 # updated 27-08-2017
+# updated 06-01-2018
 
 
 This packets need to be installed on Ubuntu.
@@ -18,12 +19,16 @@ mythtv-controller ver 0.36.x
 Howto install.
 
 mkdir mythtv-controller
-cd mythtv-controller   
-tar -zxf fmodstudioapi10811linux.tar.gz
+cd mythtv-controller
+sudo make installsound
+make compile
+sudo make install
 
-Now install by doing.
+
+You can do this options to install by doing.
 
 Possible targets:
+
 'sudo sh apt-get.sh'       - Install software required by mythtv-controller
 'sudo make installsound'   - Install FMOD sound system (You need this to compile the program)
 'make compile'             - Compile mythtv-controller
@@ -34,7 +39,7 @@ You can uninstall by.
 'sudo make uninstall'      - Uninstall mythtv-controller FMOD/irrKlang/libraries and headers
 
 
-# If you change the sound device or the screen size or the tema. The program have to be
+# If you change the sound device or the screen size. The program have to be
 # restarted before the change is applyed.
 #
 # Programmed by Hans-Henrik Grüner-Pedersen
