--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mythtv-controller (0.37.4) unstable; urgency=medium
+mythtv-controller (0.37-4) unstable; urgency=medium
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
