--- a/install.txt
+++ b/install.txt
@@ -7,6 +7,7 @@
 # updated 06-01-2018
 # updated 09-10-2019
 # updated 21-08-2021
+# UPDATED 23-04-2024
 
 
 This packets need to be installed on Ubuntu.
@@ -17,8 +18,7 @@ dialog libglc-dev imagemagick liblircclient-dev xmltv libglc-dev libdevil1c2 unz
 
 Version.
 
-mythtv-controller ver 0.38.x
-
+mythtv-controller ver 0.42.x
 
 Now you have spotify view.
 
