--- a/install.txt
+++ b/install.txt
@@ -6,22 +6,22 @@
 # updated 06-01-2018
 # updated 09-10-2019
 # updated 21-08-2021
-# UPDATED 23-04-2024
+# updated 23-04-2024
 # Updated 07-07-2024
 # Updated 30-12-2024
+# Updated 01-07-2025
 
 
 This packets need to be installed on Ubuntu.
 
-g++ make libdevil-dev libsdl1.2-dev glutg3-dev libmysqlclient-dev libsdl-image1.2-dev lirc-modules-source 
-dialog libglc-dev imagemagick liblircclient-dev xmltv libglc-dev libdevil1c2 unzip lirc
+g++ make curl libcurl-ocaml-dev libdevil-dev libsdl1.2-dev glutg3-dev libsdl-image1.2-dev lirc-modules-source dialog imagemagick liblircclient-dev xmltv libglc-dev libical-dev unzip libical-dev unzip libical-dev lirc libsqlite3-dev libvlc-dev libxrandr-dev libxml2-dev libhttp-ocaml-dev libmysqlclient-dev libmediainfo-dev libfreetype-dev libfreetype6 libfreetype6-dev libfmt-dev  libglfw3 libglfw3-dev
 
-Where is a fmodstudioapi20218linux.7z file that have the fmod files need to compile.
+Where is a fmodstudioapi20307linux.tar.gz file that have the fmod files need to compile.
 you have to extract this file to the source directory to be able to compile and use the make installsound command to install fmod needed.
 
 Version.
 
-mythtv-controller ver 0.42.6
+mythtv-controller ver 0.43.2
 
 New font system to write text faster. called drawText 
 
