--- a/install.txt
+++ b/install.txt
@@ -29,6 +29,15 @@ def
 
 void drawText(const char *text, float x, float y, float scale,int color)
 
+
+mariadb settings.
+
+create database mythtvcontroller;
+GRANT ALL PRIVILEGES ON *.* TO 'mythtv'@localhost IDENTIFIED BY 'PASSWORD HERE';
+FLUSH PRIVILEGES;
+
+Now the db is ready.
+
 Now you have spotify and tidal view.
 
 Howto install.
